# DynaAMIcs

./: .gitignore  Makefile  PLAN.md  README.md  RECAP.md  UPDATETRISTAN.md  pyproject.toml  setup.sh  slurm_tahoe_3seeds.sh  slurm_tahoe_fast.sh  slurm_tahoe_ultra.sh
artifacts/: glv_benchmark_jepa.json  plot_benchmark.py  train_log.txt
artifacts/ckpt/: microbiome_jepa.pt
cluster/: README.md
eb_jepa/: _smoke_encoder.py  architectures.py  losses.py
eb_jepa/datasets/: utils.py
examples/audio/: README.md
examples/eeg/: README.md
examples/fintime/: README.md
examples/gray_scott/: README.md
examples/ltsf/: README.md
examples/microbiome/: ARCHITECTURE.md  README.md  ablation_norm.slurm  aggregate.py  architecture.html  baselines.py  eval.py  eval_suite.slurm  glv_benchmark.py  glv_benchmark.slurm  main.py  make_figures.py  run_ablation.sh  sweep_tvar.slurm  temporal_benchmark.py  train.slurm  viz.py
examples/microbiome2img/: README.md  compare.py  demo.py  encoder.py  fcgr.py  fetch_otu_sequences.py  main.py  synth.py
examples/microbiome_jepa/: README.md  REPORT.md  _smoke_probe.py  baselines_port.py  diagnose_planning.py  eval_collapse.py  eval_generalization.py  eval_pure_variants.py  m3_ensemble_gate.py  m3_metric_gate.py  m3_multistep.py  m3_onpolicy.py  m3_recognition.py  main.py  make_metric_figure.py  oracle_K_sweep.py  plan_glv.py  plan_glv_decoded.py  plan_glv_learned.py  probe_downstream.py  realdata.py  run_ablation.py  run_glv_dim.sh  run_glv_final.sh  run_glv_gen.sh  run_glv_idm.sh  run_glv_k24_big.sh  run_glv_k24_lowreg.sh  run_glv_k24_metric.sh  run_glv_plan.sh  run_glv_sweep.sh  run_realdata.sh  run_realdata_big.sh  run_realdata_ema.sh  run_realdata_eval.sh  run_realdata_sigreg.sh  run_repro_check.sh  run_tech_invariance.sh  screen_instances.py  tech_invariance.py  (+1 more)
examples/pointcloud/: README.md
hackathon_guide/: GuideRendu.md  main.tex
paper/: main.tex
results/: aggregate_microbiome.py  microbiome_summary.txt
tasks/: 01-data.md  02-encoder.md  03-planning.md  04-downstream-eval.md  05-glv-simulator.md
tests/: conftest.py  test_microbiome.py  test_microbiome2img.py
(+116 files in other folders)
